kustomize/manifests/kubeflow/base/overlays/cluster-yuqc/common/istio-1-9-0/kubeflow-istio-resources/base/patch-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
spec:
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-certs
    hosts:
    - '*.cluster-yuqc.network-yuqc.com'
